[package]
name = "rustyphosphor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.91"
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Window",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext", 
    "WebGlProgram", 
    "WebGlShader", 
    "WebGlBuffer", 
    "WebGlUniformLocation"
]


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"